--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mahamdi Mohammed</title>
-	<link rel="shortcut icon" href="check_mark.png" type="image/x-icon">
-	<link rel="icon" href="check_mark.png" type="image/x-icon">
+	<link rel="shortcut icon" href="images/check_mark.png" type="image/x-icon">
+	<link rel="icon" href="images/check_mark.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -52,7 +52,7 @@
         <div id="lead-content">
             <h1>Mahamdi Mohammed</h1>
             <h2>Software Engineer</h2>
-            <a href="https://github.com/MahamdiAmine/Curriculum-Vitae/raw/master/Mahamdi%20Mohammed.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="https://github.com/MahamdiAmine/Mahamdi-Mohammed-Curriculum-Vitae/raw/master/Mahamdi%20Mohammed%20Curriculum-Vitae.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -160,7 +160,7 @@
                 <!-- End .project -->
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project2.png" height="200px" width="200px" />
+                        <img src="images/project22.png" height="200px" width="200px" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
